--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,13 @@
     <color name="orange_secondary">#ff8a65</color>
     <color name="orange_light">#ffbb93</color>
     <color name="orange_dark">#c75b39</color>
+    <color name="blue_200">#91ccfe</color>
+    <color name="blue_500">#229afc</color>
+    <color name="blue_700">#1d79da</color>
+    <color name="red_200">#ee9b9c</color>
+    <color name="red_400">#ef5350</color>
+    <color name="red_500">#f3473b</color>
+    <color name="red_700">#d23433</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="whitesmoke">#f5f5f5</color>
