--- a/app/src/main/res/layout/fragment_add_exercise.xml
+++ b/app/src/main/res/layout/fragment_add_exercise.xml
@@ -124,6 +124,7 @@
             android:layout_margin="16dp"
             app:layout_constraintBottom_toTopOf="@+id/type_of_movement_text_view"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/muscles_involved_text_view">
 
