--- a/app/src/main/res/layout/fab_button.xml
+++ b/app/src/main/res/layout/fab_button.xml
@@ -11,7 +11,7 @@
         android:contentDescription="@string/fab_add"
         app:srcCompat="@drawable/ic_add"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation"/>
+        app:layout_constraintBottom_toBottomOf="@+id/home_recycler_view"/>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fab_add_exercise"
