--- a/app/src/main/res/layout/fragment_pick_exercise.xml
+++ b/app/src/main/res/layout/fragment_pick_exercise.xml
@@ -5,10 +5,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.google.android.material.textview.MaterialTextView
-        android:id="@+id/your_workouts_text_view"
+        android:id="@+id/select_exercise"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/your_workouts"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="@string/select_exercise"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:textColor="@color/black"
@@ -19,15 +21,13 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/home_recycler_view"
+        android:id="@+id/pick_exercises_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_margin="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/your_workouts_text_view" />
-
-    <include layout="@layout/fab_button"/>
+        app:layout_constraintTop_toBottomOf="@+id/select_exercise" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
