--- a/app/src/main/res/layout/row_item_home.xml
+++ b/app/src/main/res/layout/row_item_home.xml
@@ -13,17 +13,18 @@
         android:layout_margin="8dp"
         app:cardElevation="6dp"
         app:strokeWidth="1dp"
-        app:cardCornerRadius="15dp"
         android:layout_gravity="start">
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/home_item_text_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:background="@color/whitesmoke"
             android:textAlignment="center"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
             android:textColor="@color/black"
             tools:text="Allenamento" />
 
     </com.google.android.material.card.MaterialCardView>
+
 </FrameLayout>
