--- a/app/src/main/res/layout/row_item_exercise_set_reps.xml
+++ b/app/src/main/res/layout/row_item_exercise_set_reps.xml
@@ -37,30 +37,30 @@
             android:id="@+id/set_kg_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="60dp"
             android:text="@string/kg"
             app:layout_constraintBottom_toTopOf="@id/set_kg_text_view"
-            app:layout_constraintEnd_toEndOf="@id/set_kg_text_view"
-            app:layout_constraintHorizontal_bias="0.92"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
         <EditText
             android:id="@+id/set_kg_text_view"
-            android:layout_width="0dp"
+            android:layout_width="40dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
+            android:autofillHints="0"
+            android:inputType="number"
+            android:textAlignment="center"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toEndOf="@id/set_number_text_view"
             app:layout_constraintTop_toTopOf="parent"
-            tools:text="20"
-            android:autofillHints="0"
-            android:inputType="number" />
+            tools:text="20" />
 
         <TextView
             android:id="@+id/set_reps_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="18dp"
             android:text="@string/reps"
             app:layout_constraintBottom_toTopOf="@id/set_reps_text_view"
             app:layout_constraintEnd_toEndOf="@id/set_reps_text_view"
@@ -72,7 +72,7 @@
             android:id="@+id/set_time_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
+            android:layout_marginStart="18dp"
             android:text="@string/tempo_sec"
             app:layout_constraintBottom_toTopOf="@id/set_time_text_view"
             app:layout_constraintEnd_toEndOf="@id/set_time_text_view"
