--- a/app/src/main/res/layout/fragment_add_exercise.xml
+++ b/app/src/main/res/layout/fragment_add_exercise.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -89,17 +88,6 @@
                 android:text="@string/isometric_type" />
         </RadioGroup>
 
-        <!--<androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/muscle_list_recycler_view"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/exercise_muscles_text_view"
-            app:layout_constraintVertical_bias="0.110000014" />-->
-
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/muscles_involved_text_view"
             android:layout_width="match_parent"
@@ -122,6 +110,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="16dp"
+            app:singleSelection="true"
+            app:selectionRequired="true"
             app:layout_constraintBottom_toTopOf="@+id/type_of_movement_text_view"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
