--- a/app/src/main/res/layout/row_item_exercise.xml
+++ b/app/src/main/res/layout/row_item_exercise.xml
@@ -11,11 +11,11 @@
         android:id="@+id/exercise_item_card_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_gravity="start"
         android:layout_margin="8dp"
-        app:cardElevation="6dp"
-        app:strokeWidth="1dp"
         app:cardCornerRadius="15dp"
-        android:layout_gravity="start">
+        app:cardElevation="6dp"
+        app:strokeWidth="1dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -34,18 +34,6 @@
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
                 tools:text="Nome" />
-
-            <ImageButton
-                android:id="@+id/delete_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:layout_margin="8dp"
-                android:backgroundTint="@color/white"
-                android:contentDescription="@string/delete"
-                android:src="@drawable/ic_delete"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
             <com.google.android.material.textview.MaterialTextView
                 android:id="@+id/exercise_item_type_text_view"
@@ -73,6 +61,29 @@
                 app:layout_constraintStart_toEndOf="@+id/exercise_item_type_text_view"
                 app:layout_constraintTop_toBottomOf="@+id/exercise_item_text_view"
                 tools:text="Movimento" />
+
+            <com.github.ivbaranov.mfb.MaterialFavoriteButton
+                android:id="@+id/add_to_favorites"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/delete_button"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <ImageButton
+                android:id="@+id/delete_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="end"
+                android:layout_margin="8dp"
+                android:backgroundTint="@color/white"
+                android:contentDescription="@string/delete"
+                android:src="@drawable/ic_delete"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
