--- a/app/src/main/res/layout/row_item_pick_exercise.xml
+++ b/app/src/main/res/layout/row_item_pick_exercise.xml
@@ -17,6 +17,12 @@
         app:cardCornerRadius="15dp"
         android:layout_gravity="start">
 
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/pick_exercise_item_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"/>
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
