--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -8,11 +8,11 @@
 
     <ImageView
         android:id="@+id/grid_image"
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        android:scaleType="fitXY"
+        android:layout_width="250dp"
+        android:layout_height="200dp"
         android:layout_centerHorizontal="true"
-        android:src="@mipmap/ic_launcher"/>
+        android:scaleType="centerCrop"
+        android:src="@mipmap/ic_launcher" />
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/grid_image_title"
         android:layout_width="wrap_content"
