--- a/app/src/main/res/layout/fragment_photos.xml
+++ b/app/src/main/res/layout/fragment_photos.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -18,16 +19,15 @@
             android:textColor="@color/black" />
 
 
-        <GridView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/grid_view"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="550dp"
             android:layout_below="@id/photos_title"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:horizontalSpacing="8dp"
-            android:numColumns="2"
             android:verticalSpacing="8dp" />
 
 <!--        <ImageView
