--- a/app/src/main/res/layout/grid_item.xml
+++ b/app/src/main/res/layout/grid_item.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/grid_card"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_margin="4dp"
+    app:cardCornerRadius="5dp"
+    app:strokeWidth="1dp"
+    app:strokeColor="@color/whitesmoke"
     android:padding="2dp">
 
     <RelativeLayout
@@ -17,7 +20,8 @@
             android:layout_height="175dp"
             android:layout_centerHorizontal="true"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_launcher" />
+            android:src="@mipmap/ic_launcher"
+            android:contentDescription="@string/your_photo" />
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/grid_image_title"
             android:layout_width="wrap_content"
@@ -27,11 +31,15 @@
             android:layout_centerHorizontal="true"
             android:text="Name"/>
         <ImageButton
+            android:id="@+id/delete_photo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_close"
             android:layout_alignParentEnd="true"
-            android:background="@color/red_500"/>
+            android:background="@color/red_500"
+            android:layout_marginTop="2dp"
+            android:layout_marginEnd="2dp"
+            android:contentDescription="@string/delete_photo" />
 
     </RelativeLayout>
 
