--- a/app/src/main/res/layout/row_item_workout_exercise.xml
+++ b/app/src/main/res/layout/row_item_workout_exercise.xml
@@ -8,7 +8,9 @@
     android:layout_margin="8dp"
     app:strokeWidth="1dp"
     app:cardCornerRadius="15dp"
-    android:layout_gravity="start">
+    android:layout_gravity="start"
+    android:focusable="true"
+    android:focusableInTouchMode="true">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
